--- a/css/base.css
+++ b/css/base.css
@@ -32,6 +32,7 @@ a:hover{ text-decoration: none;}
 .ml-30{ margin-left: 30px;}
 .mt-20{ margin-top: 20px;}
 .ml-200{ margin-left: 200px;}
+.mt-100{ margin-top: 100px;}
 .ml-100{ margin-left: 100px;}
 .ml-10{ margin-left: 10px;}
 .ml-5{ margin-left: 5px;}
