--- a/css/bbs.css
+++ b/css/bbs.css
@@ -43,9 +43,16 @@
 .left-content .content .txt p{ margin-top: 6px; color: #b2b2b2; font-size: 12px;}
 .left-content .comment{ padding: 3px 7px; background: #969cb1; color: #fff; border-radius: 10px; font-size: 12px;}
 
-.left-content .more a{ display: block; width: 100px; height: 30px; line-height: 30px; margin: 0 auto; background: #2ea7e0; color: #fff; border-radius: 10px;}
-.left-content .more a:hover{ background: #30cfd0; -webkit-transition: all .3s; -o-transition: all .3s; transition: all .3s;}
-
+/*.left-content .more button{ display: block; width: 100px; height: 30px; margin: 0 auto; background: #2ea7e0; color: #fff; border-radius: 10px; cursor: pointer;}
+.left-content .more button.add{ background: #666;}
+.left-content .more button:hover{ background: #30cfd0; -webkit-transition: all .3s; -o-transition: all .3s; transition: all .3s;}
+*/
+.pagination-lump{ margin-top: 30px; padding-left: 25px;}
+.pagination-lump li{ float: left; margin-right: 5px; margin-bottom: 5px;}
+.pagination-lump li p{ padding: 0 10px; height: 30px; line-height: 30px; border: solid 1px #dfdfdf; text-align: center; cursor: pointer; color: #666;}
+.pagination-lump li.cur p{ color: #fff; background: #30cfd0;}
+.pagination-lump li p:hover{ color: #fff; background: #30cfd0; -webkit-transition: all .3s; -o-transition: all .3s; transition: all .3s;}
+/*.pagination-lump li:nth-last-child(3){ background: #ff6600;}*/
 .right-content{ width: 300px; margin: 10px 0 0 10px;}
 
 .progress-lump{ background: #fff; padding-bottom: 1px;}
