--- a/css/base.css
+++ b/css/base.css
@@ -48,7 +48,7 @@ a:hover{ text-decoration: none;}
 .layout1000{ width: 1000px; margin-left: auto; margin-right: auto;}
 .nolook{ visibility: hidden;}
 
-
+.no-wrap{overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 
 
 
