--- a/css/component.css
+++ b/css/component.css
@@ -131,6 +131,7 @@
 	opacity: 0;
 	-webkit-transform: translateY(-50%) translateX(-50%) scale(0.25);
 	transform: translateY(-50%) translateX(-50%) scale(0.25);
+	cursor: pointer;
 }
 
 .demo-1 .grid a:hover figure button,
@@ -195,6 +196,7 @@
 
 .demo-3 .grid figcaption h2 {
 	color: #52be7f;
+	overflow: hidden; text-overflow: ellipsis; white-space: nowrap;
 }
 
 .demo-3 .grid a:hover figcaption h2 {
@@ -203,10 +205,61 @@
 }
 
 .threeday-content{ padding: 10px;}
-.threeday-content h2.tt{ margin-top: 30px; font-size: 20px; color: #333; padding-left: 10px; border-left: solid 5px green;}
+.threeday-content h2.tt{ margin-top: 30px; font-size: 20px; color: #000; padding-left: 10px; border-left: solid 5px green;}
 .threeday-content h2.tt span{ margin-left: 5px; font-size: 15px; color: #c74039;}
 
 .fabu-lump{ position: relative;}
 .fabu-lump a{ position: fixed; right: 10px; bottom: 400px; display: block; width: 150px; height: 40px; line-height: 40px; padding-left: 10px;background: #2ea7e0; color: #fff; font-size: 20px; text-align: center; border-radius: 35px;}
 .fabu-lump a:hover{ opacity: .8; filter: Alpha(opacity=80); -webkit-transition: all .3s; -o-transition: all .3s; transition: all .3s; }
 .fabu-lump i{ position: absolute; left: 10px; top: 5px; width: 32px; height: 32px; background: url(../images/sale/fabu.png) no-repeat;}
+
+.editor-lump{ position: absolute; width: 500px; padding: 20px 10px; border: solid 1px #dfdfdf; background: #fff; z-index: 22;}
+.editor-lump i{ position: absolute; right: -11px; top: -353px; width: 27px; font-size: 18px; text-align: center; cursor: pointer;}
+.editor-lump i:hover{ background: red; color: #fff;}
+.editor-lump p{ margin-bottom: 5px; font-weight: 700px; color: #000;}
+.editor-lump select{ display: block; width: 133px; height: 38px; background: #fff; border: solid 1px #c4c4c4; border-radius: 5px; cursor: pointer;}
+.editor-lump .ipt{ display: block; width: 330px; height: 38px; background: #fff; border: solid 1px #c4c4c4; border-radius: 5px; text-indent: 10px;}
+.editor-lump .ipt:focus{ border: solid 1px #2ea7e0;}
+.edit-content{ position: relative; margin-top: 20px;}
+.edit-content textarea{ resize: none; width: 480px; height: 150px; padding: 10px; border: solid 1px #dfdfdf; border-radius: 5px;}
+.edit-content textarea:focus{ border: solid 1px #2ea7e0;}
+.edit-content span{ margin-left: 5px; color: #fa709a;}
+.edit-content a{ display: block; width: 100px; height: 30px; line-height: 30px; margin: 15px auto 0; text-align: center; background: #fff; border: solid 2px #3583fb; color: #3583fb; border-radius: 40px; font-size: 16px;}
+.edit-content a:hover{ background: #3583fb; color: #fff; -webkit-transition: all .3s; -o-transition: all .3s; transition: all .3s;}
+.edit-content .upload{ width: 80px; height: 25px; margin-top: 10px; color: #fff; line-height: 25px; background: #a6c1ee; text-align: center; font-size: 14px; cursor: pointer; border-radius: 10px;}
+.edit-content .upload:hover{ background: #fbc2eb; -webkit-transition: all .3s; -o-transition: all .3s; transition: all .3s;}
+.edit-content .img-preview{ margin: 10px 15px; margin-left: 5px;}
+.edit-content .img-preview img{ float: left; width: 100px; height: 100px; margin-right: 20px;}
+.edit-content .img-preview img.success{ -moz-box-shadow:0px 0px 10px #14FF1C; -webkit-box-shadow:0px 0px 10px #14FF1C; box-shadow:0px 0px 10px #14FF1C;}
+
+/* 物品详情 */
+.things-content{ margin-top: 20px;}
+.things-content .back img{ margin-top: 3px; margin-right: 3px;}
+.things-content .back a{ color: #666;}
+.things-content .back a:hover{ color: #ff6600;}
+
+.things-content .tt{ height: 45px; line-height: 45px; color: #333; font-size: 24px; margin: 0px 5px; padding: 10px 5px; border-bottom: solid 1px #c9c9c9;}
+.things-content .tt p{ margin-right: 50px;}
+.things-content .tt .time{ margin-top: 5px; margin-right: 10px; font-size: 14px;}
+
+.things-content .mes{ padding: 20px; width: 850px; border-right: solid 1px #d4d4d4;}
+.things-content .mes ul{ width: 400px; margin-top: 10px;}
+.things-content .mes li{ color: #333; margin-bottom: 20px; font-size: 18px;}
+.things-content .mes li a{ display: block; width: 100px; height: 50px; line-height: 50px; margin-left: 5px; background: #ff6600; color: #fff; font-size: 16px; text-align: center; border-radius: 10px;}
+.things-content .mes li a:hover{ opacity: .8; filter: Alpha(opacity=80); -webkit-transition: all .3s; -o-transition: all .3s; transition: all .3s;}
+.things-content .mes li span.price{ color: #ff6600;}
+
+.things-content .img-box img{ width: 250px; height: 250px; margin-right: 40px;}
+
+.things-content .mes .txt{ margin-top: 50px;}
+.things-content .txt .title{ height: 40px; line-height: 40px; border-bottom: solid 1px #d4d4d4;}
+.things-content .txt .title p{ width: 80px; margin-left: 20px; color: #333; border: solid 1px #d4d4d4; border-bottom: solid 1px #fff; text-align: center; background: #fff; border-radius: 5px 5px 0 0;}
+.things-content .txt .neirong{ padding: 10px; line-height: 1.7; color: #000; font-size: 16px;}
+
+.things-content .other{ width: 250px; padding: 20px;}
+.things-content .other p{ color: #333; font-weight: bold; margin-bottom: 10px;}
+.things-content .other li{ margin-bottom: 10px;}
+.things-content .other li a{ display: block; font-size: 13px; color: #09f; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.things-content .other li a:hover{ color: #ff6600;}
+.things-content .other .intel li{ margin-bottom: 15px;}
+.p_price{ font-weight: bold;}
