--- a/css/person-center.css
+++ b/css/person-center.css
@@ -69,8 +69,7 @@ body.bg{ background: url(../images/local/bg.jpg) no-repeat;}
 .user-statistics{ padding: 10px 20px;}
 .advertising-negotiation h2{ padding-bottom: 10px; text-align: center; font-size: 20px; color: #000;}
 
-
-
+.things-fabu{ padding: 10px 20px;}
 
 
 
