--- a/css/person-center.css
+++ b/css/person-center.css
@@ -70,15 +70,39 @@ body.bg{ background: url(../images/local/bg.jpg) no-repeat;}
 .advertising-negotiation h2{ padding-bottom: 10px; text-align: center; font-size: 20px; color: #000;}
 
 .things-fabu{ padding: 10px 20px;}
+.things-fabu .message{ padding: 10px; font-size: 16px;}
+.things-fabu .message p{ color: #ff6600; font-weight: bold;}
+.things-fabu .message h4{ font-size: 14px; color: #ffcc00;}
 
+.things-fabu .message ul{ margin-top: 0px;}
+.things-fabu .message li{ height: 35px; line-height: 35px; margin-bottom: 10px;}
+.things-fabu .message li a.no-wrap{ display: block; width: 730px; font-size: 22px; color: #06a; font-weight: 400;}
+.things-fabu .message li a.no-wrap:hover{ color: #ff6600;}
+.things-fabu .message li .de{ width: 150px; background: #EE9A00; color: #fff; text-align: center; border-radius: 10px; cursor: pointer; font-size: 15px;}
+.things-fabu .message li .de:hover{ background: #ff6600; -webkit-transition: all .3s; -o-transition: all .3s; transition: all .3s;}
 
+.plus-fabu{ padding: 10px 20px;}
+.plus-fabu .message{ padding: 10px; font-size: 16px;}
+.plus-fabu .message p{ color: #ff6600; font-weight: bold;}
+.plus-fabu .message h4{ font-size: 14px; color: #ffcc00;}
 
+.plus-fabu .message ul{ margin-top: 0px;}
+.plus-fabu .message li{ height: 35px; line-height: 35px; margin-bottom: 10px;}
+.plus-fabu .message li a.no-wrap{ display: block; width: 730px; font-size: 22px; color: #06a; font-weight: 400;}
+.plus-fabu .message li a.no-wrap:hover{ color: #ff6600;}
+.plus-fabu .message li .de{ width: 150px; background: #EE9A00; color: #fff; text-align: center; border-radius: 10px; cursor: pointer; font-size: 15px;}
+.plus-fabu .message li .de:hover{ background: #ff6600; -webkit-transition: all .3s; -o-transition: all .3s; transition: all .3s;}
 
+.friend-manage{ padding: 10px 20px;}
+.friend-list{ padding: 20px;}
+.friend-list li{ float: left; width: 100px; margin-right: 20px; margin-bottom: 10px; border: solid 1px #dfdfdf;}
+.friend-list li img{ width: 100px; height: 100px; margin-bottom: 5px;}
+.friend-list li .mes{ width: 100px; height: 40px;}
+.friend-list li .mes p{ color: #09a; font-size: 12px; text-align: center;}
+.friend-list li .del-friend{ width: 70px; height: 30px; line-height: 30px; margin: 5px auto; background: #0250c5; text-align: center; color: #fff; cursor: pointer; border-radius: 5px; font-size: 12px;}
+.friend-list li .del-friend:hover{ background: #ff0000; -webkit-transition: all .3s; -o-transition: all .3s; transition: all .3s;}
 
-
-
-
-
+.no-friend{ margin-top: 10px; color:#ff0000;}
 
 
 
